Fix Issue Regarding Recipe Page
Fixes the issue with the images not showing up, website looking weird, and CI/CD servers failing due to this

--- a/src/recipe/style.css
+++ b/src/recipe/style.css
@@ -219,7 +219,7 @@ ol {
   
   .jumbotron-5 {
     display: flex;
-    background-image: url("wonton.jpg");
+    background-image: url("../assets/wonton.webp");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
